# python-patch-ng

./: README.md  patch_ng.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml  question.yml
.github/scripts/: validate-cci-patch-ng.sh
.github/workflows/: conan-center-index.yml  conan.yml  workflow.yml
example/: example.py
tests/: run_tests.py
tests/emptypatches/: create755.patch  update644.patch
tests/filepermission/: update644.patch
tests/filewithspace/: 0001-quote.diff
tests/movefile/: 0001-quote.patch
tests/patchformat/: create.patch  remove.patch  update.patch
tests/scripts/: validate-cci-patch-ng.sh
